- BsChip: update color scheme, fix layout when icon, avatar and dismissible are enabled simultaneously - BsChipGroup: fix scrollbar visibility when multi-rows or slider is disabled

--- a/scss/main/utilities.scss
+++ b/scss/main/utilities.scss
@@ -116,16 +116,24 @@
     overflow: hidden;
   }
 
-  .overflow-visible {
-    overflow: visible;
-  }
+  //.overflow-visible {
+  //  overflow: visible;
+  //}
+  //
+  //.overflow-scroll {
+  //  overflow: scroll;
+  //}
 
-  .overflow-scroll {
-    overflow: scroll;
+  .overflow-x-auto {
+    overflow-x: auto;
   }
 
   .overflow-x-hidden {
     overflow-x: hidden;
+  }
+
+  .overflow-y-auto {
+    overflow-y: auto;
   }
 
   .overflow-y-hidden {
