--- a/scss/mixins/_chip.scss
+++ b/scss/mixins/_chip.scss
@@ -15,18 +15,18 @@
         helper.shift-color($color, 65%),
         90%
       ),
-      helper.shift-color($color, 60%)
+      color.change(helper.shift-color($color, 60%), $alpha: 0.75)
     );
     $icon-color: helper.to-oklch(color.adjust($color, $lightness: -5%));
     $hover-bg: helper.set-color-contrast(
+      $color,
+      helper.set-color-contrast(
         $color,
-        helper.set-color-contrast(
-            $color,
-            helper.shift-color($color, 25%),
-            helper.shift-color($color, 45%),
-            90%
-        ),
-        helper.shift-color($color, 45%)
+        helper.shift-color($color, 25%),
+        helper.shift-color($color, 45%),
+        90%
+      ),
+      color.change(helper.shift-color($color, 45%), $alpha: 0.85)
     );
     $active-bg: helper.to-oklch(
       helper.set-color-contrast(
@@ -45,19 +45,19 @@
     $active-icon-color: helper.to-oklch(
       helper.set-color-contrast(
         $active-bg,
-        colors.$black,
-        color.adjust($color, $lightness: -7%),
+        colors.$gray-900,
+        color.adjust(colors.$white, $lightness: -5%),
         90%
       )
     );
 
-    //@if($name == 'secondary') {
-    //  --#{vars.$prefix}chip-bg: #{helper.shift-color($color, 80%)};
-    //  --#{vars.$prefix}chip-hover-bg: #{helper.shift-color($color, 60%)};
-    //} @else {
+    @if($name == 'secondary') {
+      --#{vars.$prefix}chip-bg: oklch(0.6 0 0 / 0.25); // #{helper.shift-color($color, 70%)};
+      --#{vars.$prefix}chip-hover-bg: #{helper.shift-color($color, 60%)};
+    } @else {
       --#{vars.$prefix}chip-bg: #{$chip-bg};
       --#{vars.$prefix}chip-hover-bg: #{$hover-bg};
-    //}
+    }
 
     --#{vars.$prefix}chip-color: #{colors.$black};
     --#{vars.$prefix}chip-border-color: #{$chip-bg};
@@ -67,7 +67,7 @@
     --#{vars.$prefix}chip-active-bg: #{$active-bg};
     --#{vars.$prefix}chip-active-color: #{$active-color};
     --#{vars.$prefix}chip-active-border-color: #{$active-bg};
-    --#{vars.$prefix}chip-active-icon-color: #{$active-color};
+    --#{vars.$prefix}chip-active-icon-color: #{$active-icon-color};
     --#{vars.$prefix}chip-focus-border-color: #{$active-bg};
     --#{vars.$prefix}chip-focus-shadow-color: #{$active-box-shadow-color};
   }
@@ -76,6 +76,14 @@
 @mixin make-outline-variant($name, $color) {
   .chip-outline-#{$name} {
     $border-color: helper.to-oklch(color.adjust(colors.$gray-500, $lightness: 25%));
+    $text-color: helper.to-oklch(
+      helper.set-color-contrast(
+        $color,
+        $color,
+        colors.$gray-800,
+        90%
+      )
+    );
     $hover-bg: helper.to-oklch(
       helper.set-color-contrast(
         $color,
@@ -104,8 +112,11 @@
       ),
       helper.shift-color($color, 70%)
     );
-    $active-color: helper.to-oklch(
-      helper.set-color-contrast($color, colors.$black, color.scale($color, $lightness: -50%), 90%)
+    //$active-color: helper.to-oklch(
+    //  helper.set-color-contrast($color, colors.$black, color.scale($color, $lightness: -50%), 90%)
+    //);
+    $active-icon-color: helper.to-oklch(
+      helper.set-color-contrast($color, colors.$black, color.scale($color, $lightness: -40%), 90%)
     );
     $focus-border: helper.to-oklch(
       helper.set-color-contrast($color, color.adjust($border-color, $lightness: -15%), $color)
@@ -113,16 +124,16 @@
     $active-box-shadow-color: helper.to-oklch(color.adjust($hover-bg, $lightness: 10%));
 
     --#{vars.$prefix}chip-bg: transparent;
-    --#{vars.$prefix}chip-color: #{$color};
+    --#{vars.$prefix}chip-color: #{$text-color};
     --#{vars.$prefix}chip-border-color: #{$border-color};
     --#{vars.$prefix}chip-icon-color: #{$color};
     --#{vars.$prefix}chip-hover-bg: #{$hover-bg};
     --#{vars.$prefix}chip-hover-color: #{$hover-color};
     --#{vars.$prefix}chip-hover-border-color: #{$hover-border};
     --#{vars.$prefix}chip-active-bg: #{$active-bg};
-    --#{vars.$prefix}chip-active-color: #{$active-color};
+    --#{vars.$prefix}chip-active-color: #{colors.$black};
     --#{vars.$prefix}chip-active-border-color: #{$active-bg};
-    --#{vars.$prefix}chip-active-icon-color: #{$color};
+    --#{vars.$prefix}chip-active-icon-color: #{$active-icon-color};
     --#{vars.$prefix}chip-focus-border-color: #{$focus-border};
     --#{vars.$prefix}chip-focus-shadow-color: #{$active-box-shadow-color};
   }
